--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Parcoursup analyse</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	<script type="text/javascript" src="../js/index.js"></script>
 </head>
@@ -11,10 +12,10 @@
 
 
 <div>
-	<table id="table">
+	<table class="container" id="table">
 		<thead>
 			<tr>
-				<th><abbr title="Points">écoles</abbr></th>
+				<th class="title">écoles</th>
 			</tr>
 		</thead>
 		<tbody></tbody>
