--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	<script type="text/javascript" src="../js/index.js"></script>
+	<script src="../js/riot/index.riot" type="riot"></script>
+	<script src = "https://cdnjs.cloudflare.com/ajax/libs/riot/3.13.2/riot+compiler.min.js"></script>
 </head>
 <body>
 
@@ -21,7 +23,12 @@
 		<tbody></tbody>
 	</table>
 </div>
-
+<template id="my-tag">
+	<my-tag>
+	  <p>{ props.message }</p>
+	</my-tag>
+  </template>
+  
 
 	</body>
 </html>
