debut stats formation

--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,7 @@
     <script src="../riot/main.riot" type="riot"></script>
     <script src="../riot/menu.riot" type="riot"></script>
     <script src="../riot/mypath.riot" type="riot"></script>
+    <script src="../riot/jauge.riot" type="riot"></script>
     <script src="../riot/etablissement_tab.riot" type="riot"></script>
     
 </head>
