--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Titre de la page</title>
+	<title>Parcoursup</title>
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
@@ -19,7 +19,6 @@
     <script src="../riot/mymap.riot" type="riot"></script>
     <script src="../riot/menu.riot" type="riot"></script>
     <script src="../riot/mypath.riot" type="riot"></script>
-    <script src="../riot/jauge.riot" type="riot"></script>
     <script src="../riot/etablissement_tab.riot" type="riot"></script>
     
 </head>
